--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,10 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+sumtypes = "==0.1a4"
 attr = "*"
-sumtypes = "*"
+python-opencv = "*"
 matplotlib = "*"
-opencv-python = "*"
 
 [requires]
 python_version = "3.6"
