--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 attr==0.3.2
 sumtypes==0.1a6
-matplotlib==3.3.4
-opencv-contrib-python==4.6.0.66
-pyqt5==5.15.6
-scipy==1.5.4
-pandas==1.1.5
+matplotlib==3.7.1
+opencv-contrib-python==4.7.0.72
+pyqt5==5.15.9
+scipy==1.10.1
+pandas==2.0.1
+pyqtdarktheme==2.1.0
