--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 */__pycache__/*
 _tmp/*
-_results/*
 _plots/*
 raw_data/*
 data/*
 !data/samples/
 
 Pipfile.lock
+
+_results/*
+!_results/samples/
